@@ -83,7 +83,7 @@ describe Rack::Unreloader do
     ru(:cooldown => nil).call({}).should == [1]
     update_app(code(2))
     ru.call({}).should == [1]
-    @ru.reloader.reload!
+    @ru.reload!
     ru.call({}).should == [2]
   end
 
